--- a/Include/flake-report/index.html
+++ b/Include/flake-report/index.html
@@ -6,66 +6,22 @@
       <link rel="stylesheet" href="styles.css">
    </head>
    <body>
-      <div id="masthead" class="sev-1"></div>
+      <div id="masthead" class="sev-4"></div>
       <div id="page">
           <h1>flake8 violations</h1>
-         <p id="versions">Generated on 2022-10-11 19:52
+         <p id="versions">Generated on 2022-11-03 01:29
             with mccabe: 0.6.1, pycodestyle: 2.8.0, pyflakes: 2.4.0
          </p>
          <ul id="index">
          
          <li>
-            <a href="control.createTournamentMenu.report.html">
-               <span class="count sev-1">
-                  26
+            <div id="all-good">
+               <span class="count sev-4">
+                  <span class="tick">&#x2713;</span>
                </span>
-               control\createTournamentMenu.py
-            </a>
-         </li>
-         
-         <li>
-            <a href="main.report.html">
-               <span class="count sev-1">
-                  2
-               </span>
-               main.py
-            </a>
-         </li>
-         
-         <li>
-            <a href="control.main.report.html">
-               <span class="count sev-2">
-                  17
-               </span>
-               control\main.py
-            </a>
-         </li>
-         
-         <li>
-            <a href="view.view.report.html">
-               <span class="count sev-2">
-                  6
-               </span>
-               view\view.py
-            </a>
-         </li>
-         
-         <li>
-            <a href="control.mainController.report.html">
-               <span class="count sev-2">
-                  2
-               </span>
-               control\mainController.py
-            </a>
-         </li>
-         
-         <li>
-            <a href="control.test.report.html">
-               <span class="count sev-2">
-                  1
-               </span>
-               control\test.py
-            </a>
+               <h2>All good!</h2>
+               <p>No flake8 errors found in 11 files scanned.</p>
+            </div>
          </li>
          
          </ul>
